# mx

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  NOTES.md  README  README.md  TODO.md  config.h.in  config.in  configure  configure.ac  maintainer-build  mvm.c  mx.c
.attic/: sjson.machine
.attic/sjson-examples/: big.txt  widget.json
old-checkme/ext/: mvmc  mvmc.c
sjson-examples/: big.txt  example.sjson  glossary.json  menu.json  webapp.json
src/: sjson.machine  subjson.c
